added promo section markup

--- a/src/index.html
+++ b/src/index.html
@@ -44,5 +44,33 @@
             </div>
         </div>
     </header>
+
+    <section class="promo">
+        <div class="container">
+            <div class="promo__header">
+                <img src="icons/logo.png" alt="logo" class="promo__logo">
+                <nav class="promo__nav">
+                    <ul class="promo__list">
+                        <li class="promo__item"><a href="" class="promo__link">главная</a></li>
+                        <li class="promo__item"><a href="" class="promo__link">Модули</a></li>
+                        <li class="promo__item"><a href="" class="promo__link">Отрасли</a></li>
+                        <li class="promo__item"><a href="" class="promo__link">О нас</a></li>
+                        <li class="promo__item"><a href="" class="promo__link">Наши обязательства</a></li>
+                    </ul>
+                </nav>
+            </div>
+
+            <div class="promo__wrapper">
+                <div class="promo__text">
+                    <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
+                    <h2 class="promo__subheader">PRENGI - Платформа для прозрачного
+                        управления бизнесом</h2>
+                    <button class="button button_main">Получить доступ</button>
+                </div>
+
+                <div class="slider"></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
