--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,9 @@
 
     <section class="promo">
         <div class="container">
-            <div class="promo__header">
-                <img src="icons/logo.png" alt="logo" class="promo__logo">
+            <div class="promo__content">
+                <a href="" class="promo__logo"><img src="icons/logo.png" alt="logo"></a>
+                
                 <nav class="promo__nav">
                     <ul class="promo__list">
                         <li class="promo__item"><a href="" class="promo__link">главная</a></li>
@@ -63,9 +64,9 @@
             <div class="promo__wrapper">
                 <div class="promo__text">
                     <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
-                    <h2 class="promo__subheader">PRENGI - Платформа для прозрачного
+                    <h2 class="promo__subheader"><span>PRENGI</span> - Платформа для прозрачного
                         управления бизнесом</h2>
-                    <button class="button button_main">Получить доступ</button>
+                    <button class="button button_mt39">Получить доступ</button>
                 </div>
 
                 <div class="slider"></div>
