added correct fonts paths, and some changes with markup in promo section and carousel

--- a/src/index.html
+++ b/src/index.html
@@ -61,16 +61,19 @@
                 </nav>
             </div>
 
-            <div class="promo__wrapper">
-                <div class="promo__text">
-                    <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
-                    <h2 class="promo__subheader"><span>PRENGI</span> - Платформа для прозрачного
-                        управления бизнесом</h2>
-                    <button class="button button_mt39">Получить доступ</button>
+                <div class="carousel">
+                    <div class="carousel__inner">
+                        <div class="carousel__item">
+                            <div class="promo__text">
+                                <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
+                                <h2 class="promo__subheader"><span>PRENGI</span> - Платформа для прозрачного
+                                    управления бизнесом</h2>
+                                <button class="button button_mt39">Получить доступ</button>
+                            </div>
+                            <img src="img/slide-1.png" alt="slide" class="promo__img">
+                        </div>
+                    </div>
                 </div>
-
-                <div class="slider"></div>
-            </div>
         </div>
     </section>
 </body>
