--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +47,7 @@
 
     <section class="promo">
         <div class="container">
-            <div class="promo__content">
+            <div class="promo__wrapper">
                 <a href="" class="promo__logo"><img src="icons/logo.png" alt="logo"></a>
                 
                 <nav class="promo__nav">
@@ -61,20 +61,26 @@
                 </nav>
             </div>
 
-                <div class="carousel">
-                    <div class="carousel__inner">
-                        <div class="carousel__item">
-                            <div class="promo__text">
-                                <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
-                                <h2 class="promo__subheader"><span>PRENGI</span> - Платформа для прозрачного
-                                    управления бизнесом</h2>
-                                <button class="button button_mt39">Получить доступ</button>
-                            </div>
-                            <img src="img/slide-1.png" alt="slide" class="promo__img">
+            <div class="carousel">
+                <div>
+                    <div class="promo-offer">
+                        <div class="promo-offer__wrapper">
+                            <h1 class="promo-offer__header">Управляй своим бизнесом через Smartphone</h1>
+                            <h2 class="promo-offer__subheader"><span>PRENGI</span> - Платформа для прозрачного
+                                управления бизнесом</h2>
+                            <button class="button button_mt39">Получить доступ</button>
                         </div>
+                        <img src="img/slide-1.png" alt="slide" class="promo-offer__img">
                     </div>
                 </div>
+              </div>
+           
         </div>
     </section>
+
+<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+<script src="js/slick.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
