finished promo section

--- a/src/index.html
+++ b/src/index.html
@@ -95,6 +95,28 @@
                         <img src="img/slide-1.png" alt="slide" class="promo-offer__img">
                     </div>
                 </div>
+                <div>
+                    <div class="promo-offer">
+                        <div class="promo-offer__wrapper">
+                            <h1 class="promo-offer__header">Управляй своим бизнесом через Smartphone</h1>
+                            <h2 class="promo-offer__subheader"><span>PRENGI</span> - Платформа для прозрачного
+                                управления бизнесом</h2>
+                            <button class="button button_mt39">Получить доступ</button>
+                        </div>
+                        <img src="img/slide-1.png" alt="slide" class="promo-offer__img">
+                    </div>
+                </div>
+                <div>
+                    <div class="promo-offer">
+                        <div class="promo-offer__wrapper">
+                            <h1 class="promo-offer__header">Управляй своим бизнесом через Smartphone</h1>
+                            <h2 class="promo-offer__subheader"><span>PRENGI</span> - Платформа для прозрачного
+                                управления бизнесом</h2>
+                            <button class="button button_mt39">Получить доступ</button>
+                        </div>
+                        <img src="img/slide-1.png" alt="slide" class="promo-offer__img">
+                    </div>
+                </div>
             </div>
            
         </div>
