--- a/src/index.html
+++ b/src/index.html
@@ -122,6 +122,50 @@
         </div>
     </section>
 
+    <section class="advantages">
+        <div class="container">
+            <div class="advantages__wrapper">
+                <div class="advantages__content">
+                    <div class="advantages__item">
+                        <img src="icons/icon-1.png" alt="icon" class="advantages__img">
+                        <div class="advantages__descr">Нет оперативности
+                            в принятии решений?</div>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="icons/icon-2.png" alt="icon" class="advantages__img">
+                        <div class="advantages__descr">Нет учета и контроля обслуживания?</div>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="icons/icon-3.png" alt="icon" class="advantages__img">
+                        <div class="advantages__descr">Сложно строить прогнозы и анализировать данные?</div>
+                    </div>
+                </div>
+                <div class="advantages__content">
+                    <div class="advantages__item">
+                        <img src="icons/arrows-down.png" alt="icon" class="advantages__arrows">
+                        <div class="advantages__name">С PRENGI</div>
+                    </div>
+                </div>
+                <div class="advantages__content">
+                    <div class="advantages__item">
+                        <img src="icons/icon-4.png" alt="icon" class="advantages__img">
+                        <div class="advantages__descr"><span>Все затраты спланированы
+                            и расписаны</span></div>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="icons/icon-5.png" alt="icon" class="advantages__img">
+                        <div class="advantages__descr"><span>Корректная аналитика данных online</span></div>
+                    </div>
+                    <div class="advantages__item">
+                        <img src="icons/icon-6.png" alt="icon" class="advantages__img">
+                        <div class="advantages__descr"><span>Простая интеграция с любым Вашим ПО</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 <script src="js/slick.min.js"></script>
