finally added styles to advantages

--- a/src/index.html
+++ b/src/index.html
@@ -140,23 +140,21 @@
                         <div class="advantages__descr">Сложно строить прогнозы и анализировать данные?</div>
                     </div>
                 </div>
+
+                <img src="icons/arrows-down.png" alt="arrows" class="advantages__arrows">
+                <div class="advantages__name">С PRENGI</div>
+
                 <div class="advantages__content">
-                    <div class="advantages__item">
-                        <img src="icons/arrows-down.png" alt="icon" class="advantages__arrows">
-                        <div class="advantages__name">С PRENGI</div>
-                    </div>
-                </div>
-                <div class="advantages__content">
-                    <div class="advantages__item">
+                    <div class="advantages__item advantages__item_apply">
                         <img src="icons/icon-4.png" alt="icon" class="advantages__img">
                         <div class="advantages__descr"><span>Все затраты спланированы
                             и расписаны</span></div>
                     </div>
-                    <div class="advantages__item">
+                    <div class="advantages__item advantages__item_apply">
                         <img src="icons/icon-5.png" alt="icon" class="advantages__img">
                         <div class="advantages__descr"><span>Корректная аналитика данных online</span></div>
                     </div>
-                    <div class="advantages__item">
+                    <div class="advantages__item advantages__item_apply">
                         <img src="icons/icon-6.png" alt="icon" class="advantages__img">
                         <div class="advantages__descr"><span>Простая интеграция с любым Вашим ПО</span></div>
                     </div>
