create tabs markup and styles

--- a/src/index.html
+++ b/src/index.html
@@ -163,6 +163,30 @@
         </div>
     </section>
 
+    <section class="solutions">
+        <div class="container">
+            <h2 class="solutions__header">Prengi предоставляет экспертные решения<br>
+                для Вашей отрасли</h2>
+            <div class="solutions__tabs">
+                <div class="solutions__tab">Prengi Production</div>
+                <div class="solutions__tab solutions__tab_active">Prengi FMC</div>
+                <div class="solutions__tab">Prengi Mallz Retail</div>
+                <div class="solutions__tab">Prengi Logistic</div>
+                <div class="solutions__tab">Prengi IT</div>
+                <div class="solutions__tab">Prengi HR</div>
+            </div>
+
+            <!-- <div class="solutions__carousel">
+                <img src="img/second-slider/slide-1.png" alt="slide">
+                <img src="img/second-slider/slide-1.png" alt="slide">
+                <img src="img/second-slider/slide-1.png" alt="slide">
+                <img src="img/second-slider/slide-1.png" alt="slide">
+                <img src="img/second-slider/slide-1.png" alt="slide">
+                <img src="img/second-slider/slide-1.png" alt="slide">
+            </div> -->
+        </div>
+    </section>
+
 
 <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
