--- a/src/index.html
+++ b/src/index.html
@@ -165,25 +165,25 @@
 
     <section class="solutions">
         <div class="container">
-            <h2 class="solutions__header">Prengi предоставляет экспертные решения<br>
+            <h2 class="title">Prengi предоставляет экспертные решения<br>
                 для Вашей отрасли</h2>
             <div class="solutions__tabs">
-                <div class="solutions__tab">Prengi Production</div>
-                <div class="solutions__tab solutions__tab_active">Prengi FMC</div>
+                <div class="solutions__tab solutions__tab_active">Prengi Production</div>
+                <div class="solutions__tab">Prengi FMC</div>
                 <div class="solutions__tab">Prengi Mallz Retail</div>
                 <div class="solutions__tab">Prengi Logistic</div>
                 <div class="solutions__tab">Prengi IT</div>
                 <div class="solutions__tab">Prengi HR</div>
             </div>
 
-            <!-- <div class="solutions__carousel">
-                <img src="img/second-slider/slide-1.png" alt="slide">
-                <img src="img/second-slider/slide-1.png" alt="slide">
-                <img src="img/second-slider/slide-1.png" alt="slide">
-                <img src="img/second-slider/slide-1.png" alt="slide">
-                <img src="img/second-slider/slide-1.png" alt="slide">
-                <img src="img/second-slider/slide-1.png" alt="slide">
-            </div> -->
+            <div class="solutions__carousel">
+                <div class="solutions__content solutions__content_active"><img src="img/second-slider/slide-1.png" alt="slide"></div>
+                <div class="solutions__content"><img src="img/second-slider/slide-1.png" alt="slide"></div>
+                <div class="solutions__content"><img src="img/second-slider/slide-1.png" alt="slide"></div>
+                <div class="solutions__content"><img src="img/second-slider/slide-1.png" alt="slide"></div>
+                <div class="solutions__content"><img src="img/second-slider/slide-1.png" alt="slide"></div>
+                <div class="solutions__content"><img src="img/second-slider/slide-1.png" alt="slide"></div>
+            </div>
         </div>
     </section>
 
