delete jquery libs and edit markup

--- a/src/index.html
+++ b/src/index.html
@@ -61,65 +61,31 @@
                 </nav>
             </div>
 
-            <div class="carousel">
-                <div>
-                    <div class="promo-offer">
-                        <div class="promo-offer__wrapper">
-                            <h1 class="promo-offer__header">Управляй своим бизнесом через Smartphone</h1>
-                            <h2 class="promo-offer__subheader"><span>PRENGI</span> - Платформа для прозрачного
+            <div class="promo__carousel">
+                    <div class="promo__offer">
+                        <div class="promo__block">
+                            <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
+                            <h2 class="promo__subheader"><span>PRENGI</span> - Платформа для прозрачного
                                 управления бизнесом</h2>
                             <button class="button button_mt39">Получить доступ</button>
                         </div>
-                        <img src="img/slide-1.png" alt="slide" class="promo-offer__img">
+                        <img src="img/slide-1.png" alt="slide" class="promo__img">
                     </div>
-                </div>
-                <div>
-                    <div class="promo-offer">
-                        <div class="promo-offer__wrapper">
-                            <h1 class="promo-offer__header">Управляй своим бизнесом через Smartphone</h1>
-                            <h2 class="promo-offer__subheader"><span>PRENGI</span> - Платформа для прозрачного
-                                управления бизнесом</h2>
-                            <button class="button button_mt39">Получить доступ</button>
+                    <div class="promo__navigation">
+                        <div class="promo__dots">
+                            <div class="promo__dot"></div>
+                            <div class="promo__dot promo__dot_active"></div>
+                            <div class="promo__dot"></div>
+                            <div class="promo__dot"></div>
+                            <div class="promo__dot"></div>
                         </div>
-                        <img src="img/slide-1.png" alt="slide" class="promo-offer__img">
-                    </div>
-                </div>
-                <div>
-                    <div class="promo-offer">
-                        <div class="promo-offer__wrapper">
-                            <h1 class="promo-offer__header">Управляй своим бизнесом через Smartphone</h1>
-                            <h2 class="promo-offer__subheader"><span>PRENGI</span> - Платформа для прозрачного
-                                управления бизнесом</h2>
-                            <button class="button button_mt39">Получить доступ</button>
+                        <div class="promo__arrows">
+                            <div class="promo__arrow promo__arrow-prev"></div>
+                            <div class="promo__arrow promo__arrow-next"></div>
                         </div>
-                        <img src="img/slide-1.png" alt="slide" class="promo-offer__img">
-                    </div>
-                </div>
-                <div>
-                    <div class="promo-offer">
-                        <div class="promo-offer__wrapper">
-                            <h1 class="promo-offer__header">Управляй своим бизнесом через Smartphone</h1>
-                            <h2 class="promo-offer__subheader"><span>PRENGI</span> - Платформа для прозрачного
-                                управления бизнесом</h2>
-                            <button class="button button_mt39">Получить доступ</button>
-                        </div>
-                        <img src="img/slide-1.png" alt="slide" class="promo-offer__img">
-                    </div>
-                </div>
-                <div>
-                    <div class="promo-offer">
-                        <div class="promo-offer__wrapper">
-                            <h1 class="promo-offer__header">Управляй своим бизнесом через Smartphone</h1>
-                            <h2 class="promo-offer__subheader"><span>PRENGI</span> - Платформа для прозрачного
-                                управления бизнесом</h2>
-                            <button class="button button_mt39">Получить доступ</button>
-                        </div>
-                        <img src="img/slide-1.png" alt="slide" class="promo-offer__img">
                     </div>
                 </div>
             </div>
-           
-        </div>
     </section>
 
     <section class="advantages">
@@ -168,29 +134,24 @@
             <h2 class="title">Prengi предоставляет экспертные решения<br>
                 для Вашей отрасли</h2>
             <div class="solutions__tabs">
-                <div class="solutions__tab solutions__tab_active">Prengi Production</div>
-                <div class="solutions__tab">Prengi FMC</div>
-                <div class="solutions__tab">Prengi Mallz Retail</div>
-                <div class="solutions__tab">Prengi Logistic</div>
-                <div class="solutions__tab">Prengi IT</div>
-                <div class="solutions__tab">Prengi HR</div>
+                <div class="solutions__tab solutions__tab_active" data-slide="1">Prengi Production</div>
+                <div class="solutions__tab" data-slide="2">Prengi FMC</div>
+                <div class="solutions__tab" data-slide="3">Prengi Mallz Retail</div>
+                <div class="solutions__tab" data-slide="4">Prengi Logistic</div>
+                <div class="solutions__tab" data-slide="5">Prengi IT</div>
+                <div class="solutions__tab" data-slide="6">Prengi HR</div>
             </div>
 
             <div class="solutions__carousel">
-                <div class="solutions__content solutions__content_active"><img src="img/second-slider/slide-1.png" alt="slide"></div>
-                <div class="solutions__content"><img src="img/second-slider/slide-1.png" alt="slide"></div>
-                <div class="solutions__content"><img src="img/second-slider/slide-1.png" alt="slide"></div>
-                <div class="solutions__content"><img src="img/second-slider/slide-1.png" alt="slide"></div>
-                <div class="solutions__content"><img src="img/second-slider/slide-1.png" alt="slide"></div>
-                <div class="solutions__content"><img src="img/second-slider/slide-1.png" alt="slide"></div>
+                <img src="img/second-slider/slide-1.png" alt="slide">
+                <div class="solutions__nav">
+                    <div class="solutions__arrow solutions__arrow-prev"></div>
+                    <div class="solutions__arrow solutions__arrow-next"></div>
+                </div>
             </div>
         </div>
     </section>
 
-
-<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script src="js/slick.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
