added new section

--- a/src/index.html
+++ b/src/index.html
@@ -134,8 +134,8 @@
             <h2 class="title">Prengi предоставляет экспертные решения<br>
                 для Вашей отрасли</h2>
             <div class="solutions__tabs">
-                <div class="solutions__tab solutions__tab_active" data-slide="1">Prengi Production</div>
-                <div class="solutions__tab" data-slide="2">Prengi FMC</div>
+                <div class="solutions__tab" data-slide="1">Prengi Production</div>
+                <div class="solutions__tab solutions__tab_active" data-slide="2">Prengi FMC</div>
                 <div class="solutions__tab" data-slide="3">Prengi Mallz Retail</div>
                 <div class="solutions__tab" data-slide="4">Prengi Logistic</div>
                 <div class="solutions__tab" data-slide="5">Prengi IT</div>
@@ -151,6 +151,38 @@
             </div>
         </div>
     </section>
+
+    <section class="branch">
+        <div class="container">
+            <h2 class="title title_black">Преимущества Prengi для<br>
+                Вашей отрасли</h2>
+
+            <div class="branch__wrapper">
+                <div class="branch__item branch__item-1">
+                    <div class="branch__descr"><span>Возможность внедрения и тестирования в реальном времени</span></div>
+                </div>
+                <div class="branch__item branch__item-2">
+                    <div class="branch__descr"><span>Система “Intellect”, учет уровня доступов</span></div>
+                </div>
+                <div class="branch__item branch__item-3">
+                    <div class="branch__descr"><span>Возможность использовать из любой точки мира с любого устройства</span></div>
+                </div>
+                <div class="branch__item branch__item-4">
+                    <div class="branch__descr"><span>Нет необходимости установки и стационарной работы программиста</span></div>
+                </div>
+                <div class="branch__item branch__item-5">
+                    <div class="branch__descr"><span>“Живые”
+                        бизнес-процессы</span></div>
+                </div>
+                <div class="branch__item branch__item-6">
+                    <div class="branch__descr"><span>Никаких предоплат, оплата
+                        после старта</span></div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="options"></section>
 
 <script src="js/script.js"></script>
 </body>
