finishing edit section

--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,21 @@
         </div>
     </section>
 
-    <section class="options"></section>
+    <section class="options">
+        <div class="container">
+            <h2 class="title">Варианты развертывания<br>
+                Ваших данных</h2>
+
+            <div class="options__wrapper">
+                <div class="options__item"><span class="options__title">Облачное хранилище</span>
+                    Это выделенное пользователю пространство на жестком диске сервера, находящегося в Интернете.
+                </div>
+                <div class="options__item"><span class="options__title">Размещение не сервере</span>
+                    Услуга аренды пространства в центре обработки данных (колокация серверов) предназначена для клиентов
+                </div>
+            </div>
+        </div>
+    </section>
 
 <script src="js/script.js"></script>
 </body>
