--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,7 @@
 
     <section class="branch">
         <div class="container">
-            <h2 class="title title_black">Преимущества Prengi для<br>
+            <h2 class="title title_grey">Преимущества Prengi для<br>
                 Вашей отрасли</h2>
 
             <div class="branch__wrapper">
@@ -189,12 +189,21 @@
 
             <div class="options__wrapper">
                 <div class="options__item"><span class="options__title">Облачное хранилище</span>
-                    Это выделенное пользователю пространство на жестком диске сервера, находящегося в Интернете.
+                    Это выделенное пользователю пространство на жестком <br>диске сервера, находящегося в Интернете.
                 </div>
                 <div class="options__item"><span class="options__title">Размещение не сервере</span>
-                    Услуга аренды пространства в центре обработки данных (колокация серверов) предназначена для клиентов
+                    Услуга аренды пространства в центре обработки данных <br>(колокация серверов) предназначена для клиентов
                 </div>
             </div>
+        </div>
+    </section>
+    
+    <section class="access">
+        <div class="container">
+            <img src="icons/icon-7.png" alt="icon" class="access__img">
+            <h2 class="title title_grey">Приступить очень просто!<br>
+                Нужно получить доступ и начать работу!</h2>
+            <button class="button">связаться с нами</button>
         </div>
     </section>
 
