--- a/src/index.html
+++ b/src/index.html
@@ -207,6 +207,67 @@
         </div>
     </section>
 
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__wrapper">
+                <div class="footer__item">
+                    <div class="footer__title">О компании</div>
+                    <img src="icons/footer_logo.png" alt="logo" class="footer__img">
+                    <div class="footer__descr">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века. В то время некий безымянный печатник создал большую коллекцию размеров и форм шрифтов, используя Lorem Ipsum для распечатки образцов.<br>
+                        <br>
+                        Управление задачами</div>
+                </div>
+                <div class="footer__item">
+                    <div class="footer__title">Модули</div>
+                    <a href="" class="footer__link">Обслуживание</a>
+                    <a href="" class="footer__link">Паспорт объекта
+                    </a>
+                    <a href="" class="footer__link">Автоматизация бизнес процессов (BPM)
+                    </a>
+                    <a href="" class="footer__link">Проектное управление (РРМ)
+                    </a>
+                    <a href="" class="footer__link">Управление подрядчиками
+                    </a>
+                    <a href="" class="footer__link">Персональный дашборд
+                    </a>
+                    <a href="" class="footer__link">Управление задачами
+                    </a>
+                    <a href="" class="footer__link">Управление алгоритмами
+                    </a>
+                    <a href="" class="footer__link">Управление качеством
+                    </a>
+                    <a href="" class="footer__link">Склад</a>
+                    <a href="" class="footer__link">Service desk
+                    </a>
+                    <a href="" class="footer__link">Календарь
+                    </a>
+                    <a href="" class="footer__link">Prengi market</a>
+                </div>
+                <div class="footer__item">
+                    <div class="footer__title">Отрасли</div>
+                    <a class="footer__link">Промышленность</a>
+                    <a class="footer__link">Ритейл</a>
+                    <a class="footer__link">Фасилити</a>
+                    <a class="footer__link">Логистика</a>
+                    <a class="footer__link">IT</a>
+                    <a class="footer__link">HR</a>
+                </div>
+                <div class="footer__item">
+                    <div class="footer__title">О нас</div>
+                    <a href="" class="footer__link">История
+                    </a>
+                    <a href="" class="footer__link">Наши отношения
+                    </a>
+                    <a href="" class="footer__link">Команда
+                    </a>
+                    <a href="" class="footer__link">Контакты</a>
+                </div>
+            </div>
+            <div class="footer__divider"></div>
+            <div class="footer__rights">© Prengi Ink. 2008-2017 Все права защищены.</div>
+        </div>
+    </footer>
+
 <script src="js/script.js"></script>
 </body>
 </html>
