--- a/src/index.html
+++ b/src/index.html
@@ -245,12 +245,12 @@
                 </div>
                 <div class="footer__item">
                     <div class="footer__title">Отрасли</div>
-                    <a class="footer__link">Промышленность</a>
-                    <a class="footer__link">Ритейл</a>
-                    <a class="footer__link">Фасилити</a>
-                    <a class="footer__link">Логистика</a>
-                    <a class="footer__link">IT</a>
-                    <a class="footer__link">HR</a>
+                    <a href="#" class="footer__link">Промышленность</a>
+                    <a href="#" class="footer__link">Ритейл</a>
+                    <a href="#" class="footer__link">Фасилити</a>
+                    <a href="#" class="footer__link">Логистика</a>
+                    <a href="#" class="footer__link">IT</a>
+                    <a href="#" class="footer__link">HR</a>
                 </div>
                 <div class="footer__item">
                     <div class="footer__title">О нас</div>
