change markup and styles in solutions section

--- a/src/index.html
+++ b/src/index.html
@@ -143,7 +143,7 @@
             </div>
 
             <div class="solutions__carousel">
-                <img src="img/second-slider/slide-1.png" alt="slide">
+                <img src="img/second-slider/slider-2.png" alt="slide">
                 <div class="solutions__nav">
                     <div class="solutions__arrow solutions__arrow-prev"></div>
                     <div class="solutions__arrow solutions__arrow-next"></div>
@@ -219,29 +219,29 @@
                 </div>
                 <div class="footer__item">
                     <div class="footer__title">Модули</div>
-                    <a href="" class="footer__link">Обслуживание</a>
-                    <a href="" class="footer__link">Паспорт объекта
+                    <a href="#" class="footer__link">Обслуживание</a>
+                    <a href="#" class="footer__link">Паспорт объекта
                     </a>
-                    <a href="" class="footer__link">Автоматизация бизнес процессов (BPM)
+                    <a href="#" class="footer__link">Автоматизация бизнес процессов (BPM)
                     </a>
-                    <a href="" class="footer__link">Проектное управление (РРМ)
+                    <a href="#" class="footer__link">Проектное управление (РРМ)
                     </a>
-                    <a href="" class="footer__link">Управление подрядчиками
+                    <a href="#" class="footer__link">Управление подрядчиками
                     </a>
-                    <a href="" class="footer__link">Персональный дашборд
+                    <a href="#" class="footer__link">Персональный дашборд
                     </a>
-                    <a href="" class="footer__link">Управление задачами
+                    <a href="#" class="footer__link">Управление задачами
                     </a>
-                    <a href="" class="footer__link">Управление алгоритмами
+                    <a href="#" class="footer__link">Управление алгоритмами
                     </a>
-                    <a href="" class="footer__link">Управление качеством
+                    <a href="#" class="footer__link">Управление качеством
                     </a>
-                    <a href="" class="footer__link">Склад</a>
-                    <a href="" class="footer__link">Service desk
+                    <a href="#" class="footer__link">Склад</a>
+                    <a href="#" class="footer__link">Service desk
                     </a>
-                    <a href="" class="footer__link">Календарь
+                    <a href="#" class="footer__link">Календарь
                     </a>
-                    <a href="" class="footer__link">Prengi market</a>
+                    <a href="#" class="footer__link">Prengi market</a>
                 </div>
                 <div class="footer__item">
                     <div class="footer__title">Отрасли</div>
@@ -254,13 +254,13 @@
                 </div>
                 <div class="footer__item">
                     <div class="footer__title">О нас</div>
-                    <a href="" class="footer__link">История
+                    <a href="#" class="footer__link">История
                     </a>
-                    <a href="" class="footer__link">Наши отношения
+                    <a href="#" class="footer__link">Наши отношения
                     </a>
-                    <a href="" class="footer__link">Команда
+                    <a href="#" class="footer__link">Команда
                     </a>
-                    <a href="" class="footer__link">Контакты</a>
+                    <a href="#" class="footer__link">Контакты</a>
                 </div>
             </div>
             <div class="footer__divider"></div>
