finish adaptive version web-site

--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,11 @@
                         <li class="promo__item"><a href="" class="promo__link">О нас</a></li>
                         <li class="promo__item"><a href="" class="promo__link">Наши обязательства</a></li>
                     </ul>
+                    <div class="promo__burger">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
                 </nav>
             </div>
 
