create some parts of carousel  use js es6

--- a/src/index.html
+++ b/src/index.html
@@ -67,19 +67,42 @@
             </div>
 
             <div class="promo__carousel">
-                    <div class="promo__offer">
-                        <div class="promo__block">
-                            <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
-                            <h2 class="promo__subheader"><span>PRENGI</span> - Платформа для прозрачного
-                                управления бизнесом</h2>
-                            <button class="button button_mt39">Получить доступ</button>
+                    <div class="promo__carousel-inner">
+                        <div class="promo__offer">
+                            <div class="promo__block">
+                                <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
+                                <h2 class="promo__subheader"><span>PRENGI</span> - Платформа для прозрачного
+                                    управления бизнесом</h2>
+                                <button class="button button_mt39">Получить доступ</button>
+                            </div>
+                            <img src="img/slide-1.png" alt="slide" class="promo__img">
                         </div>
-                        <img src="img/slide-1.png" alt="slide" class="promo__img">
+
+                        <div class="promo__offer">
+                            <div class="promo__block">
+                                <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
+                                <h2 class="promo__subheader"><span>PRENGI</span> - Платформа для прозрачного
+                                    управления бизнесом</h2>
+                                <button class="button button_mt39">Получить доступ</button>
+                            </div>
+                            <img src="img/slide-1.png" alt="slide" class="promo__img">
+                        </div>
+
+                        <div class="promo__offer">
+                            <div class="promo__block">
+                                <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
+                                <h2 class="promo__subheader"><span>PRENGI</span> - Платформа для прозрачного
+                                    управления бизнесом</h2>
+                                <button class="button button_mt39">Получить доступ</button>
+                            </div>
+                            <img src="img/slide-1.png" alt="slide" class="promo__img">
+                        </div>
                     </div>
+
                     <div class="promo__navigation">
                         <div class="promo__dots">
-                            <div class="promo__dot"></div>
                             <div class="promo__dot promo__dot_active"></div>
+                            <div class="promo__dot"></div>
                             <div class="promo__dot"></div>
                             <div class="promo__dot"></div>
                             <div class="promo__dot"></div>
@@ -89,7 +112,7 @@
                             <div class="promo__arrow promo__arrow-next"></div>
                         </div>
                     </div>
-                </div>
+                    </div>
             </div>
     </section>
 
