create first carousel with arrows and dots on js

--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,24 @@
                             </div>
                             <img src="img/slide-1.png" alt="slide" class="promo__img">
                         </div>
+                        <div class="promo__offer">
+                            <div class="promo__block">
+                                <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
+                                <h2 class="promo__subheader"><span>PRENGI</span> - Платформа для прозрачного
+                                    управления бизнесом</h2>
+                                <button class="button button_mt39">Получить доступ</button>
+                            </div>
+                            <img src="img/slide-1.png" alt="slide" class="promo__img">
+                        </div>
+                        <div class="promo__offer">
+                            <div class="promo__block">
+                                <h1 class="promo__header">Управляй своим бизнесом через Smartphone</h1>
+                                <h2 class="promo__subheader"><span>PRENGI</span> - Платформа для прозрачного
+                                    управления бизнесом</h2>
+                                <button class="button button_mt39">Получить доступ</button>
+                            </div>
+                            <img src="img/slide-1.png" alt="slide" class="promo__img">
+                        </div>
                     </div>
 
                     <div class="promo__navigation">
