reuse code main carousel and create second carousel with tabs

--- a/src/index.html
+++ b/src/index.html
@@ -180,16 +180,36 @@
             <h2 class="title">Prengi предоставляет экспертные решения<br>
                 для Вашей отрасли</h2>
             <div class="solutions__tabs">
-                <div class="solutions__tab" data-slide="1">Prengi Production</div>
-                <div class="solutions__tab solutions__tab_active" data-slide="2">Prengi FMC</div>
-                <div class="solutions__tab" data-slide="3">Prengi Mallz Retail</div>
-                <div class="solutions__tab" data-slide="4">Prengi Logistic</div>
-                <div class="solutions__tab" data-slide="5">Prengi IT</div>
-                <div class="solutions__tab" data-slide="6">Prengi HR</div>
+                <div class="solutions__tab solutions__tab_active">Prengi Production</div>
+                <div class="solutions__tab">Prengi FMC</div>
+                <div class="solutions__tab">Prengi Mallz Retail</div>
+                <div class="solutions__tab">Prengi Logistic</div>
+                <div class="solutions__tab">Prengi IT</div>
+                <div class="solutions__tab">Prengi HR</div>
             </div>
 
             <div class="solutions__carousel">
-                <img src="img/second-slider/slider-2.png" alt="slide">
+                <div class="solutions__inner">
+                    <div class="solutions__offer">
+                        <img src="img/second-slider/slider-2.png" alt="slide">
+                    </div>
+                    <div class="solutions__offer">
+                        <img src="img/second-slider/slider-2.png" alt="slide">
+                    </div>
+                    <div class="solutions__offer">
+                        <img src="img/second-slider/slider-2.png" alt="slide">
+                    </div>
+                    <div class="solutions__offer">
+                        <img src="img/second-slider/slider-2.png" alt="slide">
+                    </div>
+                    <div class="solutions__offer">
+                        <img src="img/second-slider/slider-2.png" alt="slide">
+                    </div>
+                    <div class="solutions__offer">
+                        <img src="img/second-slider/slider-2.png" alt="slide">
+                    </div>
+                </div>
+                                
                 <div class="solutions__nav">
                     <div class="solutions__arrow solutions__arrow-prev"></div>
                     <div class="solutions__arrow solutions__arrow-next"></div>
