create modals, add adaptive querys for modals, create some animation, and write function show modals

--- a/src/index.html
+++ b/src/index.html
@@ -334,7 +334,7 @@
     </footer>
 
     <div class="overlay">
-        <div class="modal">
+        <div class="modal modal_main">
             <div class="modal__close">&times;</div>
             <h2 class="modal__title">Просто заполните форму заявки
     
