create adaptive header

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 <body>
     <header class="header">
         <div class="container">
+            <img src="icons/up-arrow.png" class="header__arrow">
             <div class="contacts">
                 <div class="contacts__item">
                     <img src="icons/ukraine.png" alt="ukraine" class="contacts__img">
