--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="icons/favicon.ico" type="image/x-icon">
     <title>Prengi</title>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <header class="header">
+    <header class="header fadeInDown wow">
         <div class="container">
             <img src="icons/up-arrow.png" class="header__arrow">
             <div class="contacts">
@@ -46,7 +48,7 @@
         </div>
     </header>
 
-    <section class="promo">
+    <section class="promo fadeIn wow">
         <div class="container">
             <div class="promo__wrapper">
                 <a href="" class="promo__logo"><img src="icons/logo.png" alt="logo"></a>
@@ -135,7 +137,7 @@
             </div>
     </section>
 
-    <section class="advantages">
+    <section class="advantages fadeIn wow">
         <div class="container">
             <div class="advantages__wrapper">
                 <div class="advantages__content">
@@ -176,7 +178,7 @@
         </div>
     </section>
 
-    <section class="solutions">
+    <section class="solutions fadeIn wow">
         <div class="container">
             <h2 class="title">Prengi предоставляет экспертные решения<br>
                 для Вашей отрасли</h2>
@@ -218,7 +220,7 @@
         </div>
     </section>
 
-    <section class="branch">
+    <section class="branch fadeIn wow">
         <div class="container">
             <h2 class="title title_grey">Преимущества Prengi для<br>
                 Вашей отрасли</h2>
@@ -248,7 +250,7 @@
         </div>
     </section>
 
-    <section class="options">
+    <section class="options fadeIn wow">
         <div class="container">
             <h2 class="title">Варианты развертывания<br>
                 Ваших данных</h2>
@@ -264,7 +266,7 @@
         </div>
     </section>
     
-    <section class="access">
+    <section class="access fadeIn wow">
         <div class="container">
             <img src="icons/icon-7.png" alt="icon" class="access__img">
             <h2 class="title title_grey">Приступить очень просто!<br>
@@ -273,7 +275,7 @@
         </div>
     </section>
 
-    <footer class="footer">
+    <footer class="footer fadeInUp wow">
         <div class="container">
             <div class="footer__wrapper">
                 <div class="footer__item">
@@ -358,7 +360,7 @@
         </div>
     </div>
     
-
+<script src="js/wow.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
